--- a/src/public/index.html
+++ b/src/public/index.html
@@ -59,7 +59,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="" data-target="produtos"><i class="fa fa-shopping-cart"></i> Produtos</a>
+                        <a class="nav-link active" aria-current="page" href="" data-target="produto"><i class="fa fa-shopping-cart"></i> Produtos</a>
                         </li>
                 </ul>
                 </div>
@@ -89,6 +89,7 @@
 
     <script src="js/app.js"></script>
     <script src="js/contato.js"></script>
+    <script src="js/produto.js"></script>
     
 </body>
 
